# biological-compatibility-benchmarks

./: .gitignore  AUTHORS.txt  Makefile  README.md  launch.json.template  pyproject.toml
.github/workflows/: black.yaml  flake8.yaml  tests.yaml
aintelope/: __main__.py  experiments.py  gridsearch.py  nonpipeline.py  pipeline.py  plot_memory_records.ipynb
aintelope/agents/: __init__.py  ddpg_agent.py  dqn_agent.py  example_agent.py  inference_agent.py  instinct_agent.py  memory.py  ppo_agent.py  q_agent.py  sac_agent.py  sb3_base_agent.py  shard_agent.py  simple_agents.py  td3_agent.py
aintelope/analytics/: gridsearch_analytics.py  merge_gridsearch_result_files.py  plot_results.ipynb  plotting.py  recalculate_gridsearch_sfella_scores.py  recording.py  remove_trials_from_results.py  statistical_significance.py
aintelope/config/: config_baseline_experiment.yaml  config_experiment.yaml  config_experiment_exampleagent.yaml  config_experiment_instinct.yaml  config_experiment_mixed.yaml  config_experiment_random.yaml  config_experiment_reward.yaml  config_experiment_score.yaml  config_experiment_score_a2c.yaml  config_experiment_score_a2c_cnn2.yaml  config_experiment_score_a2c_cnn3.yaml  config_experiment_score_a2c_mlp.yaml  config_experiment_score_ddpg.yaml  config_experiment_score_dqn.yaml  config_experiment_score_dqn_cnn2.yaml  config_experiment_score_dqn_cnn3.yaml  config_experiment_score_dqn_mlp.yaml  config_experiment_score_ppo.yaml  (+19 more)
requirements/: aintelope.txt  api.txt  dev.txt
site/: publishconf.py  tasks.py
tests/: __main__.py  conftest.py  test_config.py
(+54 files in other folders)
